# Nemotron

./: .env  .env.example  .gitignore  Procfile  README.md  app.py  config.py  hash.py  pyproject.toml  render.yaml  requirements.txt  requirements.txt.bak  setup.sh  start.sh  tool_cache.db
core/: agent.py  llm_client.py  metrics.py  skill_loader.py  summarizer.py  tool_cache.py
instance/: devagent.db
skills/: api.md  debug.md  docker.md  git.md  node.md  project.md  python.md  render.md  sql.md  termux.md
static/: script.js  style.css
templates/: index.html  login.html
tools/: __init__.py  base.py  code_tools.py  command_tools.py  edit_tools.py  file_tools.py  search_tools.py  web_tools.py
web/: app.py  auth.py  limiter.py  models.py  routes_api.py  routes_ui.py
workspace/: indexer.py  manager.py  watcher.py
workspaces/default/: index.html
